# saria

./: .gitignore  Dockerfile  Makefile  README.md  docker.compose.yml  pyproject.toml
demo_app/config/: default.config.yml
demo_app/consumer/: main.py
demo_app/consumer/handlers/: __init__.py
demo_app/data_access/: __init__.py  data_access.py  repostitory.py
demo_app/models/: __init__.py  pet.py
demo_app/server/: main.py
demo_app/server/routes/: __init__.py
demo_app/server/routes/pets/: __init__.py
demo_app/server/routes/pets/v1/: __init__.py  get.py  list.py  (+1 more)
demo_app/server/v1/: get.py
mongodb_data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--1330213951025420205.wt  collection-2--1330213951025420205.wt  index-1--1330213951025420205.wt  index-3--1330213951025420205.wt  sizeStorer.wt
mongodb_data/diagnostic.data/: metrics.2024-01-30T02-45-52Z-00000  metrics.2024-01-30T03-07-02Z-00000  metrics.interim
saria/app/: __init__.py  app.py  bundle.py  config.py  dependency.py  factory.py  injector.py  manifest.py  module.py
saria/data_access/: __init__.py
saria/decorators/: memoize.py
saria/http/: __init__.py  server.py
saria/jpath/: __init__.py
saria/messaging/: __init__.py  models.py  setup_local_stack.py
saria/messaging/consumer/: __init__.py  consumer.py  message_handler.py  message_handlers.py
saria/messaging/producer/: __init__.py  producer.py
saria/messaging/service/: __init__.py
saria/models/: __init__.py
saria/mongo/: __init__.py
saria/service/: __init__.py
tests/app/: test_app.py  test_injector.py
