[tool.poetry]
name = "saria"
version = "0.1.1"
description = ""
authors = ["Tyler Steele <tsteele627@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
python-dotenv = "^1.0.1"
omegaconf = "^2.3.0"
uvicorn = "^0.27.0"
gunicorn = "^21.2.0"
pyee = "^11.1.0"
boto3 = "^1.34.29"
watchgod = "^0.8.2"
pymongo = {version="4.5.0",extras = ["srv"]}


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
demo-server = "demo_app.server.main:app --reload --reload-dir=./saria --reload-dir=./demo_app"
consumer = "watchgod demo_app.consumer.main:run"